[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragwatch"
version = "0.1.0"
description = "Existing Ragnarok market scraper, packaged for reuse by market_intel."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44.0",
    "discord.py>=2.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "data_provider",
    "discord_notifier",
    "http_provider",
    "main",
    "monitor",
    "parser",
    "playwright_provider",
    "sound_notifier",
]
